--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/actionbar_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
@@ -23,16 +23,17 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
+        android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/profil"
-        android:background="@null"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="@+id/actionbar_image"
         app:layout_constraintHorizontal_bias="0.94"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/nameText"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -50,33 +51,81 @@
         android:id="@+id/walking_stickman"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="508dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/walking_stickman"
-        app:layout_constraintTop_toBottomOf="@+id/sitting_stickman"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/sitting_stickman"
+        android:id="@+id/training_stickman"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="472dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/walking_stickman"
-        app:layout_constraintTop_toBottomOf="@+id/laying_stickman"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/laying_stickman"
+        android:id="@+id/biking_stickman"
         android:layout_width="25dp"
         android:layout_height="25dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="437dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/walking_stickman"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="370dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/standing_stickman"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="402dp"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:src="@drawable/walking_stickman"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/other_stickman"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="368dp"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:src="@drawable/walking_stickman"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progbar_other"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="300dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="380dp"
+        app:layout_constraintStart_toEndOf="@+id/other_stickman"
+        app:layout_constraintTop_toTopOf="@+id/actionbar_image" />
+
+    <ProgressBar
+        android:id="@+id/progbar_train"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="300dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="485dp"
+        app:layout_constraintStart_toEndOf="@+id/training_stickman"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/progbar_walk"
@@ -84,8 +133,19 @@
         android:layout_width="300dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@+id/laying_stickman"
-        tools:layout_editor_absoluteY="388dp" />
+        android:layout_marginTop="520dp"
+        app:layout_constraintStart_toEndOf="@+id/walking_stickman"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progbar_bike"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="300dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="450dp"
+        app:layout_constraintStart_toEndOf="@+id/biking_stickman"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/progbar_stand"
@@ -93,19 +153,59 @@
         android:layout_width="300dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/walking_stickman"
-        app:layout_constraintTop_toBottomOf="@+id/progbar_sit" />
+        android:layout_marginTop="415dp"
+        app:layout_constraintStart_toEndOf="@+id/standing_stickman"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progbar_sit"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="300dp"
-        android:layout_height="15dp"
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="201dp"
+        android:layout_height="170dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/sitting_stickman"
-        app:layout_constraintTop_toBottomOf="@+id/progbar_walk" />
+        android:layout_marginTop="184dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/progressBarText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="100%"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="@+id/progressBar"
+        app:layout_constraintStart_toStartOf="@+id/progressBar"
+        app:layout_constraintTop_toTopOf="@+id/progressBar" />
+
+    <ImageView
+        android:id="@+id/facetoday_image"
+        android:layout_width="89dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/actionbar_image"
+        app:srcCompat="@drawable/baseline_sentiment_very_satisfied_black_48" />
+
+    <TextView
+        android:id="@+id/facetoday_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:text="I dag"
+        app:layout_constraintEnd_toEndOf="@+id/facetoday_image"
+        app:layout_constraintStart_toStartOf="@+id/facetoday_image"
+        app:layout_constraintTop_toBottomOf="@+id/facetoday_image" />
 
 
 </android.support.constraint.ConstraintLayout>
