--- a/app/src/main/res/layout/fragment_patientliste_frag.xml
+++ b/app/src/main/res/layout/fragment_patientliste_frag.xml
@@ -11,7 +11,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nameText"
         android:layout_width="274dp"
         android:layout_height="46dp"
         android:layout_marginStart="8dp"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/nameText">
 
         <LinearLayout
             android:layout_width="match_parent"
