--- a/app/src/main/res/layout/patient_data_frag.xml
+++ b/app/src/main/res/layout/patient_data_frag.xml
@@ -11,20 +11,32 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="304dp"
+        android:layout_height="308dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.934" />
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="394dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="209dp"
         android:background="@color/colorRed"
         android:gravity="center_vertical"
-        android:paddingBottom="5dp"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:text="Fornavn Efternavn"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/kalender"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -99,19 +111,5 @@
         android:text="Valg af graf"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/kalender"
-        android:name="e.android.sensmotion.Kalender_frag"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginStart="42dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        android:orientation="horizontal" />
 
 </android.support.constraint.ConstraintLayout>
