--- a/app/src/main/res/layout/fragment_patient.xml
+++ b/app/src/main/res/layout/fragment_patient.xml
@@ -168,7 +168,9 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="178dp"
+        tools:layout_editor_absoluteY="107dp">
 
     </android.support.constraint.ConstraintLayout>
 
