--- a/app/src/main/res/layout/listview_list_item.xml
+++ b/app/src/main/res/layout/listview_list_item.xml
@@ -6,19 +6,21 @@
     android:layout_height="95sp"
     android:orientation="horizontal"
     android:paddingBottom="10dp"
-    android:paddingTop="10dp">
+    android:paddingTop="10dp"
+    android:paddingLeft="4dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="80dp"
-        android:layout_height="wrap_content">
+        android:layout_height="80dp">
 
 
         <ImageView
             android:id="@+id/previousSmiley"
-            android:layout_width="57dp"
-            android:layout_height="47dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,10 +29,9 @@
 
         <TextView
             android:id="@+id/previousTitle"
-            android:layout_width="62dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_width="48dp"
+            android:layout_height="24dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginTop="0dp"
             android:text="Dag 1"
             android:textColor="@color/colorBlack"
