--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.137" />
 
     <EditText
         android:id="@+id/brugernavn"
@@ -29,7 +29,7 @@
         android:layout_height="40dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/edittext_custom"
         android:hint="Brugernavn"
         android:paddingLeft="15dp"
@@ -44,7 +44,7 @@
         android:layout_height="40dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/edittext_custom"
         android:hint="Kodeord"
         android:inputType="textPassword"
@@ -60,7 +60,7 @@
         android:layout_height="44dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/login_knap"
         android:text="Log ind"
         android:textColor="#FFFFFF"
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="48dp"
         android:checked="false"
         android:text="Forbliv logget ind"
         android:textColor="@color/colorGray"
@@ -87,7 +87,7 @@
         android:layout_width="302dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:text="@string/PersData"
         android:textColor="@color/colorGray"
         android:textStyle="bold|italic"
@@ -98,33 +98,12 @@
         android:id="@+id/glemtLogin"
         android:layout_width="wrap_content"
         android:layout_height="17dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="144dp"
         android:background="@color/colorBackground"
         android:text="Glemt dit log ind?"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logIndKnap"
-        app:layout_constraintVertical_bias="0.919" />
-
-    <TextView
-        android:id="@+id/opret"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/colorBackground"
-        android:text="Har du ikke en Konto? Opret en her!"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/glemtLogin" />
-
+        app:layout_constraintTop_toBottomOf="@+id/logIndKnap" />
 
 
 </android.support.constraint.ConstraintLayout>
