--- a/app/src/main/res/drawable/patient_list_bar.xml
+++ b/app/src/main/res/drawable/patient_list_bar.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid
-        android:color="@color/warmGrey"
-        />
+    <gradient
+        android:angle="90"
+        android:endColor="#9c1b1b"
+        android:centerColor="#ac1818"
+        android:startColor="@color/loginBottomGradient" />
     <size
         android:width="300dp"
         android:height="70dp"
