--- a/app/src/main/res/layout/patient_list_item.xml
+++ b/app/src/main/res/layout/patient_list_item.xml
@@ -3,37 +3,34 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/bagground"
-        android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingRight="5dp"
+    android:paddingLeft="5dp">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/patient_list_bar" />
-
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="95dp"
-        android:text="Simon Steen Pedersen"
-        android:textSize="24sp" />
-
-    <TextView
-        android:id="@+id/position"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="65dp"
-        android:text="1."
-        android:textSize="18sp"
-        android:textStyle="italic" />
-
+        android:background="@drawable/patient_list_bar"
+        android:orientation="horizontal"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Simon Steen Pedersen"
+            android:textAlignment="center"
+            android:textColor="@color/SENScolorWhite"
+            android:textSize="24sp" />
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
