--- a/app/src/main/res/layout/patientliste_frag.xml
+++ b/app/src/main/res/layout/patientliste_frag.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/SENScolorBackground"
+    android:background="@color/Beige"
     tools:context=".views.Patientliste_frag"
     tools:layout_editor_absoluteY="25dp">
 
