--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="Beige">#FFFCF7</color>
 
     <color name="eggwhite">#F3F1F1</color>
     <color name="warmLightGrey">#f5f3f0</color>
