--- a/app/src/main/res/drawable/setting_column.xml
+++ b/app/src/main/res/drawable/setting_column.xml
@@ -13,6 +13,10 @@
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         />
+    <gradient
+        android:startColor="@color/SENScolorRed"
+        android:endColor="@color/colorDarkRed"
+        />
     <stroke
         android:width="1dp"
         android:color="@color/lightBlack"
