--- a/app/src/main/res/layout/terapuet_setting_frag.xml
+++ b/app/src/main/res/layout/terapuet_setting_frag.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/eggwhite"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/eggwhite">
 
     <ImageView
         android:id="@+id/actionbar"
@@ -22,9 +21,9 @@
         android:id="@+id/setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="7dp"
+        android:layout_marginEnd="8dp"
         android:text="Indstillinger"
         android:textColor="#ffffff"
         android:textSize="25dp"
@@ -41,8 +40,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="3dp"
         android:background="@null"
-        android:src="@drawable/baseline_keyboard_backspace_white_48"
         android:scaleType="centerCrop"
+        android:src="@drawable/baseline_keyboard_backspace_white_48"
         app:layout_constraintStart_toStartOf="@+id/actionbar"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,8 +52,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="64dp"
         android:text="Patient Indstillinger"
-        android:textSize="23sp"
         android:textColor="@color/darkEggwhite"
+        android:textSize="23sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,7 +62,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/setting_column"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,11 +86,11 @@
         android:id="@+id/editInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Rediger oplysninger"
-        android:textColor="@color/lightBlack"
+        android:textColor="#ffffff"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/columnT1"
         app:layout_constraintStart_toStartOf="@+id/columnT1"
@@ -102,11 +100,11 @@
         android:id="@+id/contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Klients kontaktinformation"
-        android:textColor="@color/lightBlack"
+        android:textColor="#ffffff"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/columnT2"
         app:layout_constraintStart_toStartOf="@+id/columnT2"
@@ -117,8 +115,8 @@
         android:id="@+id/sensorSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="72dp"
         android:text="Sensor Indstillinger"
         android:textColor="@color/darkEggwhite"
         android:textSize="23sp"
@@ -142,12 +140,12 @@
         android:id="@+id/columnT4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/setting_column"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintHorizontal_bias="0.557"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/columnT3" />
 
@@ -155,12 +153,12 @@
         android:id="@+id/addSensor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Tilføj Sensor"
+        android:textColor="#ffffff"
         android:textSize="18sp"
-        android:textColor="@color/lightBlack"
         app:layout_constraintBottom_toBottomOf="@+id/columnT3"
         app:layout_constraintStart_toStartOf="@+id/columnT3"
         app:layout_constraintTop_toTopOf="@+id/columnT3" />
@@ -169,11 +167,11 @@
         android:id="@+id/editSensor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Rediger Sensor"
-        android:textColor="@color/lightBlack"
+        android:textColor="#ffffff"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/columnT4"
         app:layout_constraintStart_toStartOf="@+id/columnT4"
@@ -183,13 +181,13 @@
         android:id="@+id/logUd"
         android:layout_width="120dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="28dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Log ud"
-        android:textSize="18sp"
-        android:textColor="#ffffff"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="28dp"
         android:background="@drawable/logud_knap"
+        android:text="Log ud"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
